// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The PrebidSnippet component with active prop set is rendered correctly 1`] = `
<div>
  <script
    async={true}
    src="path/to/my/script.js"
  />
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "var pbjs=pbjs||{};pbjs.que=pbjs.que||[]",
      }
    }
  />
</div>
`;

exports[`The PrebidSnippet component with just a mount point is rendered correctly 1`] = `
<div>
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "var pbjs=pbjs||{};pbjs.que=pbjs.que||[]",
      }
    }
  />
</div>
`;
